package com.erapps.pokedexapp.utils

object TestTags {
    const val SEARCHBARICONBUTTON = "searchBarIconButton"
    const val SEARCHBARTEXTFIELD = "searchBarTextField"
    const val TRAILINGICONBUTTON = "trailingIconButton"
    const val LISTOFPOKEMONS = "listOfPokemons"

}